[package]
name = "selog"
version = "0.2.0-beta.0"
description = "Simple, Easy LOGger logs to StdErr."
authors = ["watcol <kantaa058@gmail.com>"]
homepage = "https://github.com/watcol/selog"
repository = "https://github.com/watcol/selog"
keywords = ["log", "logger", "loglevel"]
categories = ["development-tools::debugging"]
license = "MIT"
readme = "README.md"
edition = "2018"

include = [
  "README.md",
  "Cargo.toml",
  "src/**/*.rs"
]

[features]
opts = ["clap"]
colorchoice = ["termcolor"]

[dependencies]
ansi_term = "0.12"
atty = "0.2"
clap = { version = "3.0.0-beta", optional = true }
termcolor = { version = "1.1", optional = true }

[dependencies.log]
version = "0.4"
features = ["std"]

[dev-dependencies]
clap = "3.0.0-beta"
