[package]
name = "selog"
version = "0.2.0"
description = "Simple, Easy LOGger logs to StdErr."
authors = ["PotfMan <potfman@gmail.com>"]
homepage = "https://github.com/potfman/selog"
repository = "https://github.com/potfman/selog"
keywords = ["log", "logger", "loglevel"]
categories = ["development-tools::debugging"]
license = "MIT"
readme = "README.md"
edition = "2018"

include = [
  "README.md",
  "Cargo.toml",
  "src/**/*.rs"
]

[dependencies.log]
version = "0.4"
features = ["std"]

[package.metadata.docs.rs]
all-features = true
